k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-deployment
  labels:
    app: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app 
    spec:
      containers:
      - name:  backend-app
        image: #path to your docker image
        ports:
        - containerPort: 8080
