k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-app 
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 8080
    nodePort: 31110
