k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-app 
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 8080
    nodePort: 31110
