k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-frontend-service
            port: 
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: simple-backend-service
            port: 
              number: 8000
